﻿============================== next release ==============================

  new data (thanks to Braden Czapla, Columbia University, New York, USA, for providing numerical data in YAML format!) 
    organic/(C2H6OSi)n - polydimethylsiloxane/Schneider-RTV615.yml"
    organic/(C2H6OSi)n - polydimethylsiloxane/Schneider-Sylgard184.yml"
  bug fixes
    main/PbMoO4/Malitson-o.yml: fixed dispersion formula (denominator of the second term 0.033764 -> 0.33764) (Thanks to Darius H. Torchinsky, Temple University, Philadelphia, PA, USA)
  new data (thanks to Arina Rezaeva, Moscow State University, Russia!)
    main/H2O/Warren-2008.yml
  updated data (thanks to Omer Luria!)
    main/MoS2/Yim*.yml: fix film thickness unit and rename files respectively, info, specs
    main/H2O/Warren.yml renamed to 'Warren-1998.yml'

============================== 2018-07-01 ==============================

  !!! format modification !!! 
    'range' key in dispersion formulas replaced by 'wavelength_range'
    clean-up and expansion of "SPECS": YAML flexibility allows to include more data and organize it better than Zemax materials catalog file format (.agf)
  new data (thanks to Samuel Philippian, IL, USA!)  
    main/Ir/Hass-40C.yml
    main/Ir/Hass-3000C.yml
    main/Os/Nemoshkalenko-o.yml
    main/Os/Nemoshkalenko-e.yml
  new data (thanks to Kimberly Clifton, LightPath Technologies, Inc., Orlando, FL, USA!)  
    glass/lightpath/BD6.yml
  new data (thanks to Tobias König for submitting data!)
    organic/(C6H11NO)n - poly(N-isopropylacrylamide)/Brasse.yml
  new data (thanks to Larry Heki for suggesting data!)
    other/liquid crystals/E7/Tkachenko-o.yml
    other/liquid crystals/E7/Tkachenko-e.yml
    other/liquid crystals/5CB/Tkachenko-o.yml
    other/liquid crystals/5CB/Tkachenko-e.yml
  new data (thanks to Gintaras Tamošauskas, Vilnus University, Lithuania, for suggesting data!)
    main/BaB2O4/Tamosauskas-o.yml
    main/BaB2O4/Tamosauskas-e.yml