@@ -21,7 +21,9 @@ copyright and related rights waived via CC0 1.0
 
 <h2>Trademarks</h2>
 <ul>
-<li>SF-96</li>
+<li>SF-96 (Momentive)</li>
+<li>RTV 615 (Momentive)</li>
+<li>Sylgard 184 (Dow)</li>
 </ul>
 
 <h2>External links</h2>
